--- a/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
@@ -12,7 +12,7 @@
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-default">
-                    <div class="panel-heading text-center">Libro del Gólem <i class="fa fa-fw fa-lg fa-money"></i> {{ random(1000000000)|format }}</div>
+                    <div class="panel-heading text-center">Libro del Gólem <i class="fa fa-fw fa-lg fa-money"></i> {{ random(1000000000)|nf }}</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
@@ -40,7 +40,7 @@
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-default">
-                    <div class="panel-heading text-center">Cabeza de Medusa <i class="fa fa-fw fa-lg fa-money"></i> {{ random(1000000000)|format }}</div>
+                    <div class="panel-heading text-center">Cabeza de Medusa <i class="fa fa-fw fa-lg fa-money"></i> {{ random(1000000000)|nf }}</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
@@ -68,7 +68,7 @@
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-info">
-                    <div class="panel-heading text-center">Señor de los Elementales <i class="fa fa-fw fa-lg fa-money"></i> {{ random(1000000000)|format }}</div>
+                    <div class="panel-heading text-center">Señor de los Elementales <i class="fa fa-fw fa-lg fa-money"></i> {{ random(1000000000)|nf }}</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
@@ -96,7 +96,7 @@
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-danger">
-                    <div class="panel-heading text-center">Armageddon <i class="fa fa-fw fa-lg fa-money"></i> {{ random(1000000000)|format }}</div>
+                    <div class="panel-heading text-center">Armageddon <i class="fa fa-fw fa-lg fa-money"></i> {{ random(1000000000)|nf }}</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
@@ -124,7 +124,7 @@
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-default">
-                    <div class="panel-heading text-center">Brújula Mágica <i class="fa fa-fw fa-lg fa-money"></i> {{ random(1000000000)|format }}</div>
+                    <div class="panel-heading text-center">Brújula Mágica <i class="fa fa-fw fa-lg fa-money"></i> {{ random(1000000000)|nf }}</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
@@ -152,7 +152,7 @@
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-success">
-                    <div class="panel-heading text-center">Chamán Élfico <i class="fa fa-fw fa-lg fa-money"></i> {{ random(1000000000)|format }}</div>
+                    <div class="panel-heading text-center">Chamán Élfico <i class="fa fa-fw fa-lg fa-money"></i> {{ random(1000000000)|nf }}</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
@@ -180,7 +180,7 @@
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-primary">
-                    <div class="panel-heading text-center">23 Dragones Blancos <i class="fa fa-fw fa-lg fa-money"></i> {{ random(1000000000)|format }}</div>
+                    <div class="panel-heading text-center">23 Dragones Blancos <i class="fa fa-fw fa-lg fa-money"></i> {{ random(1000000000)|nf }}</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
