--- a/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
@@ -12,7 +12,7 @@
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-success">
-                    <div class="panel-heading text-center">Dragones Verdes <i class="fa fa-fw fa-lg fa-group"></i> {{ random(10000)|format }}</div>
+                    <div class="panel-heading text-center">Dragones Verdes <i class="fa fa-fw fa-lg fa-group"></i> {{ random(10000)|nf }}</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
@@ -40,7 +40,7 @@
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-info">
-                    <div class="panel-heading text-center">Dragones Azules <i class="fa fa-fw fa-lg fa-group"></i> {{ random(10000)|format }}</div>
+                    <div class="panel-heading text-center">Dragones Azules <i class="fa fa-fw fa-lg fa-group"></i> {{ random(10000)|nf }}</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
@@ -68,7 +68,7 @@
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-danger">
-                    <div class="panel-heading text-center">Dragones Rojos <i class="fa fa-fw fa-lg fa-group"></i> {{ random(10000)|format }}</div>
+                    <div class="panel-heading text-center">Dragones Rojos <i class="fa fa-fw fa-lg fa-group"></i> {{ random(10000)|nf }}</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
@@ -96,7 +96,7 @@
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-warning">
-                    <div class="panel-heading text-center">Dragones Negros <i class="fa fa-fw fa-lg fa-group"></i> {{ random(10000)|format }}</div>
+                    <div class="panel-heading text-center">Dragones Negros <i class="fa fa-fw fa-lg fa-group"></i> {{ random(10000)|nf }}</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
