--- a/src/Archmage/GameBundle/Resources/views/Magic/research.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/research.html.twig
@@ -12,7 +12,7 @@
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-warning">
-                    <div class="panel-heading text-center">Invocar Esqueletos <i class="fa fa-fw fa-lg fa-hourglass-half"></i> {{ random(300)|format }}/{{ random(1000)|format }}</div>
+                    <div class="panel-heading text-center">Invocar Esqueletos <i class="fa fa-fw fa-lg fa-hourglass-half"></i> {{ random(300)|nf }}/{{ random(1000)|nf }}</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
@@ -40,7 +40,7 @@
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-success">
-                    <div class="panel-heading text-center">Curación <i class="fa fa-fw fa-lg fa-hourglass-half"></i> {{ random(300)|format }}/{{ random(1000)|format }}</div>
+                    <div class="panel-heading text-center">Curación <i class="fa fa-fw fa-lg fa-hourglass-half"></i> {{ random(300)|nf }}/{{ random(1000)|nf }}</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
@@ -68,7 +68,7 @@
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-info">
-                    <div class="panel-heading text-center">Encontrar Artefacto <i class="fa fa-fw fa-lg fa-hourglass-half"></i> {{ random(300)|format }}/{{ random(1000)|format }}</div>
+                    <div class="panel-heading text-center">Encontrar Artefacto <i class="fa fa-fw fa-lg fa-hourglass-half"></i> {{ random(300)|nf }}/{{ random(1000)|nf }}</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
@@ -96,7 +96,7 @@
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-danger">
-                    <div class="panel-heading text-center">Bola de Fuego <i class="fa fa-fw fa-lg fa-hourglass-half"></i> {{ random(300)|format }}/{{ random(1000)|format }}</div>
+                    <div class="panel-heading text-center">Bola de Fuego <i class="fa fa-fw fa-lg fa-hourglass-half"></i> {{ random(300)|nf }}/{{ random(1000)|nf }}</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
