--- a/src/Archmage/GameBundle/Resources/views/Territory/demolish.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Territory/demolish.html.twig
@@ -12,7 +12,7 @@
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-default">
-                    <div class="panel-heading text-center">Pueblos <i class="fa fa-fw fa-lg fa-home"></i> {{ random(1000)|format }}</div>
+                    <div class="panel-heading text-center">Pueblos <i class="fa fa-fw fa-lg fa-home"></i> {{ random(1000)|nf }}</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
@@ -40,7 +40,7 @@
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-default">
-                    <div class="panel-heading text-center">Granjas <i class="fa fa-fw fa-lg fa-home"></i> {{ random(1000)|format }}</div>
+                    <div class="panel-heading text-center">Granjas <i class="fa fa-fw fa-lg fa-home"></i> {{ random(1000)|nf }}</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
@@ -68,7 +68,7 @@
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-default">
-                    <div class="panel-heading text-center">Nodos <i class="fa fa-fw fa-lg fa-home"></i> {{ random(1000)|format }}</div>
+                    <div class="panel-heading text-center">Nodos <i class="fa fa-fw fa-lg fa-home"></i> {{ random(1000)|nf }}</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
@@ -96,7 +96,7 @@
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-default">
-                    <div class="panel-heading text-center">Gremios <i class="fa fa-fw fa-lg fa-home"></i> {{ random(1000)|format }}</div>
+                    <div class="panel-heading text-center">Gremios <i class="fa fa-fw fa-lg fa-home"></i> {{ random(1000)|nf }}</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
@@ -124,7 +124,7 @@
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-default">
-                    <div class="panel-heading text-center">Talleres <i class="fa fa-fw fa-lg fa-home"></i> {{ random(1000)|format }}</div>
+                    <div class="panel-heading text-center">Talleres <i class="fa fa-fw fa-lg fa-home"></i> {{ random(1000)|nf }}</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
@@ -152,7 +152,7 @@
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-default">
-                    <div class="panel-heading text-center">Fortalezas <i class="fa fa-fw fa-lg fa-home"></i> {{ random(1000)|format }}</div>
+                    <div class="panel-heading text-center">Fortalezas <i class="fa fa-fw fa-lg fa-home"></i> {{ random(1000)|nf }}</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
@@ -180,7 +180,7 @@
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-default">
-                    <div class="panel-heading text-center">Barreras <i class="fa fa-fw fa-lg fa-home"></i> {{ random(1000)|format }}</div>
+                    <div class="panel-heading text-center">Barreras <i class="fa fa-fw fa-lg fa-home"></i> {{ random(1000)|nf }}</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
