--- a/src/Archmage/GameBundle/Resources/views/Territory/explore.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Territory/explore.html.twig
@@ -10,7 +10,7 @@
                     <h1><i class="fa fa-fw fa-search"></i>Explorar</h1>
                 </div>
                 <div class="panel panel-default">
-                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-hourglass-half"></i> {{ random(300)|format }} <i class="fa fa-fw fa-lg fa-globe"></i> {{ random(3000)|format }}</div>
+                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-hourglass-half"></i> {{ random(300)|nf }} <i class="fa fa-fw fa-lg fa-globe"></i> {{ random(3000)|nf }}</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
